# dijkstraMPI

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
Dijkstra/: Dijkstra.sln
Dijkstra/DijkstraCommon/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  CMakeLists.txt  CommandLineArgumentsExtractor.h  CommandLineArgumentsHandler.cpp  CommandLineArgumentsHandler.h  DijkstraAlgorithm.h  DijkstraAlgorithmBackend.cpp  DijkstraAlgorithmBackend.h  DijkstraCommon.vcxproj  DijkstraCommon.vcxproj.filters  Log.h  Makefile  ResultsPrinter.cpp  ResultsPrinter.h  Validator.cpp  Validator.h  VertexData.h
Dijkstra/DijkstraMPI/: CMakeLists.txt  DijkstraMPI.cpp  DijkstraMPI.h  DijkstraMPI.vcxproj  DijkstraMPI.vcxproj.filters  DijkstraMPISetup.cpp  DijkstraMPISetup.h  Dijkstra_MPI.cpp  Makefile  main.cpp
Dijkstra/DijkstraSerial/: CMakeLists.txt  DijkstraSerial.cpp  DijkstraSerial.h  DijkstraSerial.vcxproj  DijkstraSerial.vcxproj.filters  Dijkstra_Serial.cpp  Makefile  main.cpp
Dijkstra_MPI/: Dijkstra_MPI.sln
Dijkstra_MPI/Dijkstra_MPI/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  Dijkstra_MPI.cpp  Dijkstra_MPI.vcxproj  Dijkstra_MPI.vcxproj.filters
Dijkstra_MPI/data/: generateGraphs.py
Dijkstra_MPI/test/: test.py
build_uni/: Doxyfile_uni.in  Makefile
data/: generateGraphs.py
example_results/: resultsMPI_0.txt  resultsMPI_1.txt  resultsMPI_2.txt  resultsMPI_3.txt  resultsMPI_4.txt  resultsMPI_5.txt  resultsMPI_6.txt
report/: report.tex
report/drawio/: AdjacencyMatrixExample.drawio  Diagram1.drawio  Diagram2.drawio  Diagram3.drawio  DijkstraArch1.drawio  MatrixSplit.drawio
seminars/: beamerthemeAGH.sty  seminars.tex
seminars/drawio/: Algo0.drawio  Algo1.drawio  Algo2.drawio  Arrays.drawio  Example.drawio  MatrixChunks.drawio
test/: test.py
