CMAKE_MINIMUM_REQUIRED( VERSION 3.0.0 )

SET( SERIAL_NAME DijkstraSerial )

SET( SERIAL_PATH ${CMAKE_SOURCE_DIR}/Dijkstra/DijkstraSerial )

SET( LIB_NAME DijkstraCommon )

SET( LIB_PATH ${CMAKE_SOURCE_DIR}/Dijkstra/DijkstraCommon )

SET( SERIAL_HEADERS 
    ${SERIAL_PATH}/DijkstraSerial.h )

SET( SERIAL_SOURCES 
    ${SERIAL_PATH}/main.cpp 
    ${SERIAL_PATH}/DijkstraSerial.cpp )

ADD_EXECUTABLE( ${SERIAL_NAME} ${SERIAL_SOURCES} ${SERIAL_HEADERS} ) 

TARGET_INCLUDE_DIRECTORIES( ${SERIAL_NAME} PRIVATE ${SERIAL_PATH} ${LIB_PATH} )


# Link libraries
TARGET_LINK_LIBRARIES( ${SERIAL_NAME} PUBLIC ${LIB_NAME} )